# django-inertia-vite

./: .gitignore  README.md  pyproject.toml
src/core/: settings.py  urls.py  views.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: main.tsx
src/frontend/src/pages/: index.scss  index.tsx
src/templates/: index.html
